finish serveur symfony configuration

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,7 +1,10 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
     secret: '%env(APP_SECRET)%'
-    assets: ~
+    assets: 
+        packages: 
+            babylon:
+                base_path: /
 
     # Note that the session will be started ONLY if you read or write from it.
     session: true
