--- a/src/BabylonJs/config/config.json
+++ b/src/BabylonJs/config/config.json
@@ -1,10 +1,3 @@
-{
-    "camera": {
-        "speed": 0.2,
-        "keysUp": [90],     
-        "keysDown": [83],    
-        "keysLeft": [81],   
-        "keysRight": [68],  
-        "angularSensibility": 3000
-    }
+{    
+    "babylonPath": "/Babylon.js"
 }
