--- a/src/BabylonJs/config/config.json
+++ b/src/BabylonJs/config/config.json
@@ -1,4 +1,4 @@
 {    
-    "babylonPath": "/Babylon.js",
+    "babylonPath": "/GeneratedBabylon.js",
     "3DfilePath": "/public/gltf/blender_chelou.gltf"
 }
