--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,5 +28,9 @@ services:
         arguments:
             $projectDir: '%kernel.project_dir%'
 
+    App\Service\CreateBabylonFileService:
+        arguments:
+            $projectDir: '%kernel.project_dir%'        
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
