Final proof of concept version

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,6 +30,10 @@ services:
 
     App\Service\CreateBabylonFileService:
         arguments:
+            $projectDir: '%kernel.project_dir%'
+
+    App\Service\CreateBabylonFileTeleportTestService:
+        arguments:
             $projectDir: '%kernel.project_dir%'        
 
     # add more service definitions when explicit configuration is needed
